# DeepRLFromHumanPref

./: .gitignore  README.md  pyproject.toml
human-feedback-api/human_feedback_api/: __init__.py  models.py
human-feedback-api/human_feedback_site/: settings.py
rl_teacher/: __init__.py  comparison_collectors.py  envs.py  evaluate.py  nn.py  segment_sampling.py  summaries.py  teach.py  utils.py  video.py
