[project]
name = "rl-teacher"
version = "2.0.0"
description = "Deep Reinforcement Learning from Human Preferences (Christiano et al., 2017)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core ML
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",

    # RL
    "gymnasium[mujoco]>=1.0",
    "mujoco>=3.0",
    "stable-baselines3>=2.3",

    # Utilities
    "tqdm>=4.65",
    "matplotlib>=3.7",
    "imageio>=2.31",
    "imageio-ffmpeg>=0.4",

    # Logging
    "tensorboard>=2.14",
]

[project.optional-dependencies]
human-feedback = [
    "django>=5.0",
    "dj-database-url>=2.1",
    "gunicorn>=21.0",
    "whitenoise>=6.6",
    "google-cloud-storage>=2.10",
]
dev = [
    "ipython>=8.0",
    "ipdb>=0.13",
    "pytest>=7.0",
]

[project.scripts]
rl-teacher = "rl_teacher.teach:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rl_teacher", "human_feedback_api"]

[dependency-groups]
dev = [
    "ipython>=8.0",
    "ipdb>=0.13",
    "pytest>=7.0",
]
